cluster/apps/downloads/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    kustomize.toolkit.fluxcd.io/prune: disabled
    routed-gateway: "true"
